--- a/task3/index.html
+++ b/task3/index.html
@@ -6,9 +6,11 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<div id="trafficLight"></div>
-<div id="trafficLight"></div>
-<div id="trafficLight"></div>
+<div class="traffic-light">
+    <div class="traffic-light-item red"></div>
+    <div class="traffic-light-item yellow"></div>
+    <div class="traffic-light-item green"></div>
+</div>
 <script src="script.js"></script>
 </body>
 </html>
