added and updated tasks
1. Main page was styled;
2. Task 1 was styled;
3. Task 2 was styled;
4. Task 3 was fixed & styled;
5. Task 4 was added;
6. Task 5 was added;
7. img was added.

--- a/index.html
+++ b/index.html
@@ -1,28 +1,34 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>JS-Start</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<nav>
-    <ul>
+<header class="links">
+  <div class="background-photo">
+    <img src="img/back.jpg" alt="">
+    <nav>
+      <ul>
         <li>
-          <a href="task1/index.html">Задача 1</a>
+          <a href="task1/index.html">Task 1</a>
         </li>
         <li>
-          <a href="task2/index.html">Задача 2</a>
+          <a href="task2/index.html">Task 2</a>
         </li>
         <li>
-          <a href="task3/index.html">Задача 3</a>
+          <a href="task3/index.html">Task 3</a>
         </li>
         <li>
-          <a href="task4/index.html">Задача 4</a>
+          <a href="task4/index.html">Task 4</a>
         </li>
         <li>
-          <a href="task5/index.html">Задача 5</a>
+          <a href="task5/index.html">Task 5</a>
         </li>
       </ul>
-</nav>
+    </nav>
+  </div>
+</header>
 </body>
 </html>
