--- a/task2/index.html
+++ b/task2/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>JS-Start. 2 задача</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<p id="consoleLog">Использование команды <b>console.log</b></p>
+<p id="consoleLog">Использование команды <b>console.log()</b></p>
 <code>
   Пример: console.log()
 </code>
