--- a/task4/index.html
+++ b/task4/index.html
@@ -2,11 +2,11 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>JS-Start. 1 задача</title>
+    <title>JS-Start. 4 задача</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<p>Посмотри в консоль, там что-то важное!</p>
-</body>
+<a href="#">Измените текст ссылки</a>
 <script src="script.js"></script>
+</body>
 </html>
